syntax = "proto3";

package key_manager_service;

service KeyManagerService {
  // Get the token issuing key
  rpc GetIssuingKey(GetIssuingKeyRequest) returns (GetIssuingKeyResponse);
}

message GetIssuingKeyRequest {
  uint64 epoch = 1;
}

message GetIssuingKeyResponse {
  bytes signing_key = 1;

  bytes public_key = 2;

  bytes params = 3;
}